@@ -42344,7 +42344,7 @@
 		<mods>
 			<mod>
 				<id>6a8805ee-2e3b-4010-8671-c196a1c44b51</id>
-				<name>Chameleon Coating[Stolen Souls]</name>
+				<name>Chameleon Coating</name>
 				<translate>Chamäleonfarbe [Gestohlene Seelen]</translate>
 				<altpage>202</altpage>
 			</mod>
