@@ -44272,7 +44272,7 @@
         <mods>
             <mod>
                 <id>6a8805ee-2e3b-4010-8671-c196a1c44b51</id>
-                <name>Chameleon Coating[Stolen Souls]</name>
+                <name>Chameleon Coating</name>
                 <translate>Revêtement caméléon</translate>
                 <altpage>145</altpage>
             </mod>
