@@ -36318,8 +36318,8 @@
             </mod>
             <mod>
                 <id>6a8805ee-2e3b-4010-8671-c196a1c44b51</id>
-                <name>Chameleon Coating[Stolen Souls]</name>
-                <translate>Chameleon Coating[Stolen Souls]</translate>
+                <name>Chameleon Coating</name>
+                <translate>Chameleon Coating</translate>
                 <altpage>174</altpage>
             </mod>
             <mod>
